# PolinomialCalculator

./: CalculatorFunctions.py  MainCalculator.py  pyproject.toml
