[tool.poetry]
name = "polinomialcalculator"
version = "0.1.0"
description = ""
authors = ["Maria Caetano"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
